--- a/app/views/kasittelija/paatosEsikatselu.html
+++ b/app/views/kasittelija/paatosEsikatselu.html
@@ -47,8 +47,8 @@
       <p>Päätös</p>
     </div>
     <div class="col-md-10">
-      <p>Liikennevirasto on hakemuksen perusteella päättänyt myöntää hakijalle <b>{{hakija}}</b> valtionavustuksena:
-        <b>{{paatos.myonnettyavustus| currency:"&euro;"}}</b></p>
+      <p>Liikennevirasto on hakemuksen perusteella päättänyt myöntää hakijalle <b>{{hakija}}</b> valtionavustuksena
+        <b>{{avustus| currency:"&euro;"}}</b>.</p>
     </div>
   </div>
   <div class="row">
