--- a/app/views/hakija/maksatusHakemus.html
+++ b/app/views/hakija/maksatusHakemus.html
@@ -4,13 +4,13 @@
       <div ng-show="(tyyppi == 'MH1')">
         <a href="#/h/hakemukset"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten päänäkymään</a>
         <a href="#/h/hakemus/{{hakemus.vuosi}}/AH0/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
-           class="btn btn-primary">Avustushakemus {{hakemus.vuosi}}</a>
+           class="btn btn-default">Avustushakemus {{hakemus.vuosi}}</a>
         <a
           href="#/h/maksatushakemus/{{hakemus.vuosi}}/MH1/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
-          class="btn btn-default">1. maksatushakemus {{hakemus.vuosi}}</a>
+          class="btn btn-primary">1. maksatushakemus {{hakemus.vuosi}}</a>
         <a
           href="#/h/maksatushakemus/{{hakemus.vuosi}}/MH2/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
-          class="btn btn-primary">2. maksatushakemus {{hakemus.vuosi}}</a>
+          class="btn btn-default">2. maksatushakemus {{hakemus.vuosi}}</a>
 
         <div class="row">
           <div class="col-md-12">
@@ -21,13 +21,13 @@
       <div ng-show="(tyyppi == 'MH2')">
         <a href="#/h/hakemukset"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten päänäkymään</a>
         <a href="#/h/hakemus/{{hakemus.vuosi}}/AH0/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
-           class="btn btn-primary">Avustushakemus {{hakemus.vuosi}}</a>
+           class="btn btn-default">Avustushakemus {{hakemus.vuosi}}</a>
         <a
           href="#/h/maksatushakemus/{{hakemus.vuosi}}/MH1/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
-          class="btn btn-primary">1. maksatushakemus {{hakemus.vuosi}}</a>
+          class="btn btn-default">1. maksatushakemus {{hakemus.vuosi}}</a>
         <a
           href="#/h/maksatushakemus/{{hakemus.vuosi}}/MH2/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
-          class="btn btn-default">2. maksatushakemus {{hakemus.vuosi}}</a>
+          class="btn btn-primary">2. maksatushakemus {{hakemus.vuosi}}</a>
 
         <div class="row">
           <div class="col-md-12">
@@ -136,7 +136,7 @@
 
                   <p
                     ng-show="hakemusForm.psa1haettavaavustus.$error.positiivinenArvo && !hakemusForm.psa1haettavaavustus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -151,7 +151,7 @@
 
                   <p
                     ng-show="hakemusForm.psa1omarahoitus.$error.positiivinenArvo && !hakemusForm.psa1omarahoitus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
 
                   <p
                     ng-show="hakemusForm.psa1omarahoitus.$error.omarahoitusRiittava && !hakemusForm.psa1omarahoitus.$pristine"
@@ -181,7 +181,7 @@
 
                   <p
                     ng-show="hakemusForm.psa2haettavaavustus.$error.positiivinenArvo && !hakemusForm.psa2haettavaavustus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -196,7 +196,7 @@
 
                   <p
                     ng-show="hakemusForm.psa2omarahoitus.$error.positiivinenArvo && !hakemusForm.psa2omarahoitus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
 
                   <p
                     ng-show="hakemusForm.psa2omarahoitus.$error.omarahoitusRiittava && !hakemusForm.psa2omarahoitus.$pristine"
@@ -226,7 +226,7 @@
 
                   <p
                     ng-show="hakemusForm.psamhaettavaavustus.$error.positiivinenArvo && !hakemusForm.psamhaettavaavustus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -241,7 +241,7 @@
 
                   <p
                     ng-show="hakemusForm.psamomarahoitus.$error.positiivinenArvo && !hakemusForm.psamomarahoitus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
 
                   <p
                     ng-show="hakemusForm.psamomarahoitus.$error.omarahoitusRiittava && !hakemusForm.psamomarahoitus.$pristine"
@@ -288,7 +288,7 @@
 
                   <p
                     ng-show="hakemusForm.hkslhaettavaavustus.$error.positiivinenArvo && !hakemusForm.hkslhaettavaavustus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -303,7 +303,7 @@
 
                   <p
                     ng-show="hakemusForm.hkslomarahoitus.$error.positiivinenArvo && !hakemusForm.hkslomarahoitus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
 
                   <p
                     ng-show="hakemusForm.hkslomarahoitus.$error.omarahoitusRiittava && !hakemusForm.hkslomarahoitus.$pristine"
@@ -333,7 +333,7 @@
 
                   <p
                     ng-show="hakemusForm.hkklhaettavaavustus.$error.positiivinenArvo && !hakemusForm.hkklhaettavaavustus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -348,7 +348,7 @@
 
                   <p
                     ng-show="hakemusForm.hkklomarahoitus.$error.positiivinenArvo && !hakemusForm.hkklomarahoitus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
 
                   <p
                     ng-show="hakemusForm.hkklomarahoitus.$error.omarahoitusRiittava && !hakemusForm.hkklomarahoitus.$pristine"
@@ -378,7 +378,7 @@
 
                   <p
                     ng-show="hakemusForm.hkllhaettavaavustus.$error.positiivinenArvo && !hakemusForm.hkllhaettavaavustus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -393,7 +393,7 @@
 
                   <p
                     ng-show="hakemusForm.hkllomarahoitus.$error.positiivinenArvo && !hakemusForm.hkllomarahoitus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
 
                   <p
                     ng-show="hakemusForm.hkllomarahoitus.$error.omarahoitusRiittava && !hakemusForm.hkllomarahoitus.$pristine"
@@ -423,7 +423,7 @@
 
                   <p
                     ng-show="hakemusForm.hktlhaettavaavustus.$error.positiivinenArvo && !hakemusForm.hktlhaettavaavustus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -438,7 +438,7 @@
 
                   <p
                     ng-show="hakemusForm.hktlomarahoitus.$error.positiivinenArvo && !hakemusForm.hktlomarahoitus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
 
                   <p
                     ng-show="hakemusForm.hktlomarahoitus.$error.omarahoitusRiittava && !hakemusForm.hktlomarahoitus.$pristine"
@@ -484,7 +484,7 @@
 
                   <p
                     ng-show="hakemusForm.kimhaettavaavustus.$error.positiivinenArvo && !hakemusForm.kimhaettavaavustus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -499,7 +499,7 @@
 
                   <p
                     ng-show="hakemusForm.kimomarahoitus.$error.positiivinenArvo && !hakemusForm.kimomarahoitus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
 
                   <p
                     ng-show="hakemusForm.kimomarahoitus.$error.omarahoitusRiittava && !hakemusForm.kimomarahoitus.$pristine"
@@ -529,7 +529,7 @@
 
                   <p
                     ng-show="hakemusForm.kmpkhaettavaavustus.$error.positiivinenArvo && !hakemusForm.kmpkhaettavaavustus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -544,7 +544,7 @@
 
                   <p
                     ng-show="hakemusForm.kmpkomarahoitus.$error.positiivinenArvo && !hakemusForm.kmpkomarahoitus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
 
                   <p
                     ng-show="hakemusForm.kmpkomarahoitus.$error.omarahoitusRiittava && !hakemusForm.kmpkomarahoitus.$pristine"
@@ -573,7 +573,7 @@
 
                   <p
                     ng-show="hakemusForm.kmkhaettavaavustus.$error.positiivinenArvo && !hakemusForm.kmkhaettavaavustus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -588,7 +588,7 @@
 
                   <p
                     ng-show="hakemusForm.kmkomarahoitus.$error.positiivinenArvo && !hakemusForm.kmkomarahoitus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
 
                   <p
                     ng-show="hakemusForm.kmkomarahoitus.$error.omarahoitusRiittava && !hakemusForm.kmkomarahoitus.$pristine"
@@ -617,7 +617,7 @@
 
                   <p
                     ng-show="hakemusForm.krthaettavaavustus.$error.positiivinenArvo && !hakemusForm.krthaettavaavustus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -632,7 +632,7 @@
 
                   <p
                     ng-show="hakemusForm.krtomarahoitus.$error.positiivinenArvo && !hakemusForm.krtomarahoitus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
 
                   <p
                     ng-show="hakemusForm.krtomarahoitus.$error.omarahoitusRiittava && !hakemusForm.krtomarahoitus.$pristine"
@@ -661,7 +661,7 @@
 
                   <p
                     ng-show="hakemusForm.kmhaettavaavustus.$error.positiivinenArvo && !hakemusForm.kmhaettavaavustus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -676,7 +676,7 @@
 
                   <p
                     ng-show="hakemusForm.kmomarahoitus.$error.positiivinenArvo && !hakemusForm.kmomarahoitus.$pristine"
-                    class="help-block">Arvon tulee olla positiivinen.</p>
+                    class="help-block">Arvon tulee olla positiivinen (0 - 999 999 999).</p>
 
                   <p
                     ng-show="hakemusForm.kmomarahoitus.$error.omarahoitusRiittava && !hakemusForm.kmomarahoitus.$pristine"
@@ -764,13 +764,13 @@
                 <div class="col-md-4 text-center">
                   <div ng-file-drop ng-model="myFiles" class="drop-box"
                        drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}"
-                       multiple="true" allow-dir="true">
+                       ng-multiple="false" allow-dir="false">
                     <p>Raahaa liite tähän</p>
 
                     <p>tai</p>
 
                     <div ng-no-file-drop>Tiedoston raahaaminen ei ole mahdollista tällä selain-versiolla</div>
-                    <button ng-file-select class="btn btn-primary" ng-model="myFiles" multiple="true">Valitse tiedosto
+                    <button ng-file-select class="btn btn-primary" ng-model="myFiles" ng-multiple="false">Valitse tiedosto
                     </button>
                   </div>
                 </div>
