--- a/app/views/kasittelija/hakemuskaudenHallinta.html
+++ b/app/views/kasittelija/hakemuskaudenHallinta.html
@@ -1,18 +1,4 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-3">
-      <a href="#/k/hakemukset/AH0" class="btn btn-primary">Avustushakemukset</a>
-    </div>
-    <div class="col-md-3">
-      <a href="#/k/hakemukset/MH1" class="btn btn-primary">1. maksatushakemukset</a>
-    </div>
-    <div class="col-md-3">
-      <a href="#/k/hakemukset/MH2" class="btn btn-primary">2. maksatushakemukset</a>
-    </div>
-    <div class="col-md-3">
-      <a href="#/k/hakemuskaudenhallinta" class="btn btn-default">Hakemuskauden hallinta</a>
-    </div>
-  </div>
   <div ng-repeat="hakemuskausi in hakemuskaudet">
     <div ng-if="hakemuskausi.uusi" class="uusihakemuskausi">
       <div class="row">
@@ -69,41 +55,181 @@
           <br>
         </div>
         <div class="col-md-3 text-center">
-          <div class="panel panel-primary">
+          <div class="panel panel-primary hakemuskausi-panel">
             <div class="panel-heading">
               <p class="panel-title">Avustushakemus</p>
             </div>
             <div class="panel-body">
-              <h4>Hakuaika:</h4>
+              <div class="row">
+                <p>
 
-              <p>{{hakemuskausi.avustushakemusAlkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.avustushakemusLoppupvm |
-                date:'dd.MM yyyy'}}</p>
+                <div class="col-md-3 text-center">24/24</div>
+                <div class="col-md-9 text-left"><span class="label label-default">Keskeneräinen</span></div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-3 text-center"> 0/24</div>
+                <div class="col-md-9 text-left"><span class="label label-danger">Vireillä</span></div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-3 text-center">0/24</div>
+                <div class="col-md-9 text-left"><span class="label label-default">Täydennettävänä</span></div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-3 text-center">0/24</div>
+                <div class="col-md-9 text-left"><span class="label label-danger">Täydennetty</span></div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-3 text-center">0/24</div>
+                <div class="col-md-9 text-left"><span class="label label-success">Tarkastettu</span></div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-3 text-center">0/24</div>
+                <div class="col-md-9 text-left"><span class="label label-primary">Päätetty</span></div>
+                </p>
+              </div>
+              <div class="row">
+                <div class="hakemuskausi-panel-hakuaika">
+                  <p>Hakuaika:</p>
+
+                  <p>{{hakemuskausi.avustushakemusAlkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.avustushakemusLoppupvm |
+                    date:'dd.MM yyyy'}}</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-md-3 text-center">
-          <div class="panel panel-info">
+          <div class="panel panel-info hakemuskausi-panel">
             <div class="panel-heading">
               <p class="panel-title">1. maksatushakemus</p>
             </div>
             <div class="panel-body">
-              <h4>Hakuaika:</h4>
+              <div class="row">
+                <p>
 
-              <p>{{hakemuskausi.maksatushakemus1Alkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.maksatushakemus1Loppupvm |
-                date:'dd.MM yyyy'}}</p>
+                <div class="col-md-3 text-center"></div>
+                <div class="col-md-9 text-left"></div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-3 text-center"></div>
+                <div class="col-md-9 text-left"></div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-3 text-center"></div>
+                <div class="col-md-9 text-left"></div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-3 text-center"></div>
+                <div class="col-md-9 text-left"></div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-12 text-center">Ei Käynnissä</div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-3 text-center"></div>
+                <div class="col-md-9 text-left"></div>
+                </p>
+              </div>
+              <div class="row">
+                <div class="hakemuskausi-panel-hakuaika">
+
+                  <p>Hakuaika:</p>
+
+                  <p>{{hakemuskausi.maksatushakemus1Alkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.maksatushakemus1Loppupvm
+                    |
+                    date:'dd.MM yyyy'}}</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-md-3 text-center">
-          <div class="panel panel-info">
+          <div class="panel panel-info hakemuskausi-panel">
             <div class="panel-heading">
               <p class="panel-title">2. maksatushakemus</p>
             </div>
             <div class="panel-body">
-              <h4>Hakuaika:</h4>
+              <div class="row">
+                <p>
 
-              <p>{{hakemuskausi.maksatushakemus2Alkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.maksatushakemus2Loppupvm |
-                date:'dd.MM yyyy'}}</p>
+                <div class="col-md-3 text-center"></div>
+                <div class="col-md-9 text-left"></div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-3 text-center"></div>
+                <div class="col-md-9 text-left"></div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-3 text-center"></div>
+                <div class="col-md-9 text-left"></div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-3 text-center"></div>
+                <div class="col-md-9 text-left"></div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-12 text-center">Ei Käynnissä</div>
+                </p>
+              </div>
+              <div class="row">
+                <p>
+
+                <div class="col-md-3 text-center"></div>
+                <div class="col-md-9 text-left"></div>
+                </p>
+              </div>
+              <div class="row">
+                <div class="hakemuskausi-panel-hakuaika">
+
+                  <p>Hakuaika:</p>
+
+                  <p>{{hakemuskausi.maksatushakemus2Alkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.maksatushakemus2Loppupvm
+                    |
+                    date:'dd.MM yyyy'}}</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
